
[[x30-eos]]
==== Exactly Once Semantics

`EOSMode.V1` (aka `ALPHA`) is no longer supported.

IMPORTANT: When using transactions, the minimum broker version is 2.5.

See <<exactly-once>> and https://cwiki.apache.org/confluence/display/KAFKA/KIP-447%3A+Producer+scalability+for+exactly+once+semantics[KIP-447] for more information.

[[x30-obs]]
==== Observation

Enabling observation for timers and tracing using Micrometer is now supported.
See <<observation>> for more information.

[[x30-global-embedded-kafka]]
==== Global Single Embedded Kafka

The embedded Kafka (`EmbeddedKafkaBroker`) can now be start as a single global instance for the whole test plan.
See <<same-broker-multiple-tests>> for more information.

[[x30-retryable]]
==== Retryable Topics Changes

This feature is no longer considered experimental (as far as its API is concerned), the feature itself has been supported since 2.7, but with a greater than normal possibility of breaking API changes.

The bootstrapping of <<retry-topic>> infrastructure beans has changed in this release to avoid some timing problems that occurred in some application regarding application initialization.
See <<retry-config>> for more information.

[[x30-lc-changes]]
==== Listener Container Changes

Events related to consumer authentication and authorization failures are now published by the container.
See <<events>> for more information.

[[x30-template-changes]]
==== `KafkaTemplate` Changes

The futures returned by this class are now `CompletableFuture` s instead of `ListenableFuture` s.
See <<kafka-template>>.

[[x30-rkt-changes]]
==== `ReplyingKafkaTemplate` Changes

The futures returned by this class are now `CompletableFuture` s instead of `ListenableFuture` s.
See <<replying-template>> and <<exchanging-messages>>.

[[x30-listener]]
==== `@KafkaListener` Changes

You can now use a custom correlation header which will be echoed in any reply message.
See the note at the end of <<replying-template>> for more information.